# azurapy

./: .gitignore  CHANGELOG.md  CHANGES.md  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
azurapy/: __init__.py  api.py  client.py  connector.py  main.py  utils.py  wrapper.py
azurapy/_api/: __init__.py  base.py  mount_points.py  nomplaying.py  stations.py
azurapy/models/: base.py  mount_points.py  nowplaying.py
azurapy/ost/: __init__.py  connector.py  const.py  main.py
azurapy/ost/models/: nowplaying.py
