[tool.poetry]
name = "azurapy"
version = "0.0.1"
description = "Simple python API integration for AzuraCast: free and open-source self hosted web radio management suite"
authors = ["Artem 'artctv' <artctvcode@gmail.con>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
