[tool.poetry]
name = "azurapy"
version = "0.0.1"
description = "Simple python API integration for AzuraCast: free and open-source self hosted web radio management suite"
authors = ["Artem 'artctv' <artctvcode@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
commitizen = "^2.23.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "v$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
